// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ChoiceField with a checkbox 1`] = `
<div
  className="control "
>
  <input
    className="healtheintent-application"
    defaultChecked={false}
    disabled={false}
    name="children_present"
    onBlur={[Function]}
    onFocus={[Function]}
    type="checkbox"
    value="children_present"
  />
  <label
    className="label healtheintent-label-text"
  >
    Do you have any Children?
     
  </label>
</div>
`;

exports[`should render a checkbox 1`] = `
<div
  className="control "
>
  <input
    className="input"
    defaultChecked={false}
    disabled={false}
    name={null}
    onBlur={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <label
    className="label"
  >
    Checkbox
     
  </label>
</div>
`;

exports[`should render a checkbox with a hidden label 1`] = `
<div
  className="control "
>
  <input
    checked={true}
    className="input"
    disabled={false}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <label
    className="label"
  >
    Checkbox
     
  </label>
</div>
`;

exports[`should render a controlled checkbox 1`] = `
<div
  className="control "
>
  <input
    checked={true}
    className="input"
    disabled={false}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <label
    className="label"
  >
    Checkbox
     
  </label>
</div>
`;

exports[`should render a disabled checkbox 1`] = `
<div
  className="control "
>
  <input
    checked={true}
    className="input"
    disabled={true}
    name={null}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <label
    className="label"
  >
    Checkbox
     
  </label>
</div>
`;

exports[`should render an uncontrolled checkbox 1`] = `
<div
  className="control "
>
  <input
    className="input"
    defaultChecked={true}
    disabled={false}
    name={null}
    onBlur={[Function]}
    onFocus={[Function]}
    type="checkbox"
  />
  <label
    className="label"
  >
    Checkbox
     
  </label>
</div>
`;
